# Streaming-Data-Pipeline-with-Integrated-AI-for-Feature-Extraction

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  spark-consumer.py
